# mir

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
sources/include/mir/: fn_macros.hpp  mir_macros.hpp  pp_macros.hpp  type_macros.hpp
sources/include/object/: object_macros.hpp
sources/module/core/: archive.ixx  core.ixx
sources/module/core/utils/: util-classes.ixx
sources/module/mir/: generator.ixx  mir-module.ixx  mir.ixx
sources/module/mir/common/: common-module.ixx  common.ixx  index.ixx  this_type.ixx  typehash.ixx  typelist.ixx
sources/module/mir/function/: function-helper.ixx  function-impl.ixx  function-info.ixx  function-iterator.ixx  function-module.ixx  function.ixx
sources/module/mir/property/: property-enums.ixx  property-helper.ixx  property-impl.ixx  property-info.ixx  property-iterator.ixx  property-module.ixx  property.ixx
sources/module/mir/type/: type.ixx
sources/module/object/: class.ixx  field.ixx  module.ixx  object-module.ixx  object.ixx  type-manager.ixx  type.ixx
sources/module/object/type/: field.ixx  property.ixx  type-module.ixx
sources/src/: CMakeLists.txt
sources/src/core/: CMakeLists.txt
sources/src/mir/: CMakeLists.txt  function.cpp  mir.cpp  property.cpp  type.cpp
sources/src/object/: CMakeLists.txt  class.cpp  field.cpp  object.cpp
sources/src/object/type/: field.cpp
